--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dragdrop-dragula",
-  "version": "1.0.0",
+  "name": "dragdrop-dragula-2",
+  "version": "1.0.4",
   "description": "custom position when drag element",
   "main": "dragula.js",
   "scripts": {
@@ -15,5 +15,26 @@
   "bugs": {
     "url": "https://github.com/trungliem87/dragdrop-dragula/issues"
   },
-  "homepage": "https://github.com/trungliem87/dragdrop-dragula#readme"
+  "homepage": "https://github.com/trungliem87/dragdrop-dragula#readme",
+  "dependencies": {
+    "contra": "1.9.4",
+    "crossvent": "1.5.4"
+  },
+  "devDependencies": {
+    "bower": "1.5.2",
+    "browserify": "11.0.0",
+    "clean-css": "3.3.6",
+    "electron-prebuilt": "0.30.1",
+    "hihat": "1.2.1",
+    "jshint": "2.8.0",
+    "jshint-stylish": "2.0.1",
+    "nib": "1.1.0",
+    "phantomjs": "2.1.3",
+    "stylus": "0.52.0",
+    "tap-dev-tool": "1.3.0",
+    "tape": "4.0.1",
+    "tape-run": "^2.1.3",
+    "uglify-js": "2.4.24",
+    "watchify": "3.3.0"
+  }
 }
