--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tap-dev-tool": "1.3.0",
     "tape": "4.0.1",
     "tape-run": "^2.1.3",
-    "uglify-js": "2.4.24",
+    "uglify-js": "~2.6.0",
     "watchify": "3.3.0"
   }
 }
